the style of mag is not right

--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -2,12 +2,11 @@
  <br>
    <ul class="ul-style">
    	   <li>
-   	          <a href="#">关于我们</a>
-   	          <a href="#">联系我们</a>
+   	          <a href="#" style="color:#ed4c1c">关于我们</a>
+   	          <a href="#" style="color:#ed4c1c">联系我们</a>
    	   </li>
-   	   
-   </ul>
-	<p >Copyright ©2017 Desgin By 董名晏 和 孙艳</p>
-	     <p class="text-center">ILIFE 商城欢迎您的光临</p>
-</div>
 
+   </ul>
+	<p style="color:#ed4c1c">Copyright ©2017 Desgin By 董名晏 和 孙艳</p>
+	     <p class="text-center" style="color:#ed4c1c">ILIFE 商城欢迎您的光临</p>
+</div>
