--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -35,7 +35,7 @@
                 <hr class="line">
     						<div class="row">
                   <div class="col-md-4">
-    								<%= link_to(add_to_cart_product_path(product), :method => :post, :class => "link") do %>
+    								<%= link_to(collect_product_path(product), method: :post, :class => "link") do%>
     								<i class="fa fa-heart"> </i>收藏
     								<% end %>
     							</div>
