--- a/app/views/products/bgs.html.erb
+++ b/app/views/products/bgs.html.erb
@@ -19,7 +19,7 @@
       <%= link_to product_path(product) do %>
     <% if product.photos.present? %>
             <%= image_tag(product.photos[0].image.thumb.url ) %>
-        <% else %>   
+        <% else %>
           <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "thumbnail") %>
         <% end %>
       <% end %>
@@ -29,7 +29,7 @@
       <hr class="line">
       <div class="row">
         <div class="col-md-4">
-          <%= link_to(add_to_cart_product_path(product), :method => :post, :class => "link") do %>
+          <%= link_to(collect_product_path(product), method: :post, :class => "link") do%>
           <i class="fa fa-heart"> </i>收藏
           <% end %>
         </div>
