--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,5 +1,6 @@
+<div class="container">
 <div class="row">
-	<div class="col-md-12">
+	<div class="col-md-10">
 		
 		<h2> 订单明细 </h2>
 
@@ -76,4 +77,5 @@
 		 <p class="text-center">此订单已完成付款</p>
 		 <% end %>
 	</div>
+</div>
 </div>
